force-app/main/default/objects/PageInfo__mdt/PageInfo__mdt.object-meta.xml
<CustomObject>
    <description>Contains page information like URL, component name etc.,</description>
    <label>Page Info</label>
    <pluralLabel>Page Info</pluralLabel>
</CustomObject>