force-app/main/default/objects/PageInfo__mdt/fields/IsJSONBasedPage__c.field-meta.xml
<CustomField>
    <fullName>IsJSONBasedPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Page Info is driven with Page Layout Schema</description>
    <inlineHelpText>Flag to indicate if the Page Info is driven with Page Layout Schema</inlineHelpText>
    <label>Is JSON Based Page?</label>
    <type>Checkbox</type>
</CustomField>