force-app/main/default/objects/PageInfo__mdt/fields/JsonLayoutSchema__c.field-meta.xml
<CustomField>
    <fullName>JsonLayoutSchema__c</fullName>
    <description>Page layout in JSON format.</description>
    <label>JSON Layout Schema</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>