force-app/main/default/objects/PageInfo__mdt/fields/LightningComponentName__c.field-meta.xml
<CustomField>
    <fullName>LightningComponentName__c</fullName>
    <description>Page lightning component name. If this is used then the component will be dynamically rendered in the container.</description>
    <inlineHelpText>Page lightning component name. If this is used then the component will be dynamically rendered in the container.</inlineHelpText>
    <label>Lightning Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>