force-app/main/default/objects/PageInfo__mdt/fields/Page_Display_Name_View__c.field-meta.xml
<CustomField>
    <fullName>Page_Display_Name_View__c</fullName>
    <label>Page Display Name View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absent Parent</fullName>
            </value>
            <value>
                <fullName>Access to Healthcare Coverage Summary</fullName>
            </value>
            <value>
                <fullName>Alien Sponsor</fullName>
            </value>
            <value>
                <fullName>American Indian Alaskan Native</fullName>
                <label>American Indian or Alaskan Native</label>
            </value>
            <value>
                <fullName>AuthRepsAssisterAgents</fullName>
            </value>
            <value>
                <fullName>Benefits from Another State</fullName>
            </value>
            <value>
                <fullName>Blindness</fullName>
            </value>
            <value>
                <fullName>Change in Existing Expense</fullName>
            </value>
            <value>
                <fullName>Change in Existing Income</fullName>
            </value>
            <value>
                <fullName>Change in Existing Resource</fullName>
            </value>
            <value>
                <fullName>Child Support Enforcement</fullName>
            </value>
            <value>
                <fullName>Conviction</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Enrollment in Healthcare Coverage Summary</fullName>
            </value>
            <value>
                <fullName>Entitled Benefits</fullName>
            </value>
            <value>
                <fullName>Expedite your SNAP Benefits</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Expenses Summary</fullName>
            </value>
            <value>
                <fullName>Former Foster Care</fullName>
            </value>
            <value>
                <fullName>Health Condition</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Healthcare Coverage Selection</fullName>
            </value>
            <value>
                <fullName>Household Circumstances</fullName>
            </value>
            <value>
                <fullName>Household Meals</fullName>
            </value>
            <value>
                <fullName>Household Member Summary</fullName>
            </value>
            <value>
                <fullName>In Home Assistance</fullName>
            </value>
            <value>
                <fullName>Income &amp; Subsidies Selection</fullName>
            </value>
            <value>
                <fullName>Income Summary</fullName>
            </value>
            <value>
                <fullName>KI-HIPP Preferred Payment Method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>