force-app/main/default/objects/PageInfo__mdt/fields/PageDisplayName__c.field-meta.xml
<CustomField>
    <fullName>PageDisplayName__c</fullName>
    <description>Display name for the flow. 
Example : Address 

If custom label is used then prefix with $. 
Example : $Address</description>
    <inlineHelpText>Display name for the flow. 
Example : Address 

If custom label is used then prefix with $. 
Example : $Address</inlineHelpText>
    <label>Page Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>