force-app/main/default/objects/PageInfo__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>Page unique name.</description>
    <label>Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>