force-app/main/default/objects/PageInfo__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Page URL.</description>
    <inlineHelpText>Page URL.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>