force-app/main/default/objects/PageInfo__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PageName__c</columns>
    <columns>PageDisplayName__c</columns>
    <columns>LightningComponentName__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>